--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,9 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
+<% flash.each do |name, msg| %>
+    <%= content_tag :section, msg, :id => "flash_#{name}", :class => "flash" %>
+<% end %>
 <%= yield %>
 
 </body>
